workin on signin page

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
+    <link rel="apple-touch-icon" href="public/apple-touch-icon.png" />
+    <link rel="manifest" href="public/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mern proj</title>
+    <meta
+    name="description"
+    content="Web site created using vite and is a utility to create resume"
+  />
+    <title>EazyRes</title>
   </head>
   <body>
     <div id="root"></div>
