--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
-    <link rel="apple-touch-icon" href="public/apple-touch-icon.png" />
-    <link rel="manifest" href="public/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
     name="description"
