shareying meta added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,6 +6,13 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="check out my easyres profile" />
+  <meta property="og:description" content="This app is plateform ti quickly make short resumes and share there without any hasel." />
+  <meta property="og:url" content="https://eazyres.netlify.app/" />
+  <meta property="og:image" content="https://eazyres.netlify.app/android-chrome-512x512.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="EazyRes" />
+  <meta property="article:author" content="Avinash Singh" />
     <meta
     name="description"
     content="Web site created using vite and is a utility to create resume"
