--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="check out my easyres profile" />
-  <meta property="og:description" content="This app is plateform ti quickly make short resumes and share there without any hasel." />
+  <meta property="og:description" content="This app is plateform to quickly make short resumes and share there without any hasel, anywhere, anytime." />
   <meta property="og:url" content="https://eazyres.netlify.app/" />
   <meta property="og:image" content="https://eazyres.netlify.app/android-chrome-512x512.png" />
   <meta property="og:type" content="website" />
@@ -15,7 +15,7 @@
   <meta property="article:author" content="Avinash Singh" />
     <meta
     name="description"
-    content="Web site created using vite and is a utility to create resume"
+    content="This app is plateform to quickly make short resumes and share there without any hasel, anywhere, anytime."
   />
     <title>EazyRes</title>
   </head>
